Mod:Html&Css for mainPage

--- a/Angular/1Pw0.0/src/app/Frontend/main-page/main-page.component.html
+++ b/Angular/1Pw0.0/src/app/Frontend/main-page/main-page.component.html
@@ -1,12 +1,6 @@
-
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>Layout di Esempio</title>
-
-
 <div class="header">Header</div>
-<div class="sidebar">Sidebar</div>
-<div class="main-content">Contenuto Principale</div>
+<div class="clearfix">
+  <div class="sidebar">Sidebar</div>
+  <div class="main-content">Contenuto Principale</div>
+</div>
 <div class="footer">Footer</div>
-
