--- a/Angular/1Pw0.0/src/app/Frontend/main-page/main-page.component.css
+++ b/Angular/1Pw0.0/src/app/Frontend/main-page/main-page.component.css
@@ -7,6 +7,8 @@
   body, html {
     height: 100%;
     font-family: Arial, sans-serif;
+    background-color: black
+  ;
   }
   
   .header, .footer {
@@ -25,7 +27,7 @@
   }
   
   .main-content {
-    background-color: #fff;
+    background-color: gray;
     padding: 20px;
     width: calc(100% - 250px);
     height: calc(100% - 40px);
