--- a/Angular/1Pw0.0/src/app/Frontend/main-page/main-page.component.html
+++ b/Angular/1Pw0.0/src/app/Frontend/main-page/main-page.component.html
@@ -1,6 +1,8 @@
-<div class="header">Header</div>
-<div class="clearfix">
-  <div class="sidebar">Sidebar</div>
-  <div class="main-content">Contenuto Principale</div>
+<div calss="all" style="background-color: black;">
+  <div class="header">Header</div>
+  <div class="clearfix">
+    <div class="sidebar">Sidebar</div>
+    <div class="main-content">Contenuto Principale</div>
+  </div>
+  <div class="footer">Footer</div>
 </div>
-<div class="footer">Footer</div>
