aggiustato un paio di robe

--- a/Angular/1Pw0.0/src/app/Frontend/main-page/main-page.component.html
+++ b/Angular/1Pw0.0/src/app/Frontend/main-page/main-page.component.html
@@ -1,9 +1,10 @@
-<div calss="all" style="background-color: black;">
+
+  <img class="logo" src="img/logoPW" >
   <div class="header">Header</div>
-  <div class="logo">Immagine</div>
+
   <div class="clearfix">
     <div class="sidebar">Sidebar</div>
     <div class="main-content">Contenuto Principale</div>
   </div>
   <div class="footer">Footer</div>
-</div>
+
